# whisper_server_backend

./: .gitignore  Cargo.toml  README.md  server_env.sh
src/: config.rs  lib.rs  main.rs
src/webserver/: mod.rs
